@@ -1,5 +1,13 @@
 2007-10-16  Tim-Philipp Müller  <tim at centricular dot net>
 
+	* tests/check/gnetcheck.c:
+	* tests/check/gnetcheck.h:
+	  Support running only specific checks of a unit test
+	  via the GST_CHECK environment variable (specify
+	  test case function names, comma-separated).
+
+2007-10-16  Tim-Philipp Müller  <tim at centricular dot net>
+
 	* NEWS:
 	* src/conn-http.c:
 	  Fix parsing of POST method response if the server returns
